force-app/main/default/objects/FinServ__FinancialAccountRole__c/FinServ__FinancialAccountRole__c.object-meta.xml
<CustomObject>
    <description>Represents the role occupied by a person or organizational entity that is involved with a financial account, such as a beneficiary or trustee.</description>
    <label>Financial Account Role</label>
    <nameField>
        <displayFormat>FAR-{000000000}</displayFormat>
        <label>Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>