force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>shows account name in form of hyperlink</description>
    <formula>HYPERLINK(&apos;/lightning/r/FinServ__FinancialAccount__c/&apos;+FinServ__FinancialAccount__r.Id+&apos;/view&apos;, FinServ__FinancialAccount__r.Account_Number__c ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>