force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field holds the account number of the financial account</description>
    <formula>FinServ__FinancialAccount__r.FinServ__FinancialAccountNumber__c</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>