force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>field that calculates account type</description>
    <formula>CASE( Product_Code_Display__c ,
 &apos;DDA&apos;,&apos;Deposit Accounts&apos;,
 &apos;FM&apos;,&apos;Deposit Accounts&apos;,
 &apos;SSI&apos;,&apos;Deposit Accounts&apos;,
 &apos;RSV&apos;,&apos;Deposit Accounts&apos;,
 &apos;CDA&apos;,&apos;Deposit Accounts&apos;,
 &apos;ILS&apos;,&apos;Loan Accounts&apos;,
 &apos;PCA&apos;,&apos;Credit Cards&apos;,
 &apos;PCB&apos;,&apos;Credit Cards&apos;,
 &apos;OLL&apos;,&apos;Other Limits and Liabilities&apos;,
 &apos;PTF&apos;,&apos;Other Limits and Liabilities&apos;,
 &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>