force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <complianceGroup>Source - OCV;Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>This field will store External ID generated by concatenating Account External ID + Financial Account Key + Financial Account Role + Start date</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>