force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/FinServ__Active__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the organizational entity or person currently occupies this role.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>