force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/FinServ__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EndDate__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>End date when the organizational entity or person relinquished this role.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>