force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/FinServ__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RelatedAccount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the organizational entity that is involved with the financial account.</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Account Roles</relationshipLabel>
    <relationshipName>FinancialAccountRoles</relationshipName>
    <type>Lookup</type>
</CustomField>