force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/FinServ__Role__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Role__c</fullName>
    <complianceGroup>Integrity_Trusted</complianceGroup>
    <description>Role that describes how the organizational entity or person is involved with the financial account.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Additional Owner</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Annuitant</fullName>
            </value>
            <value>
                <fullName>Appoint / Remove Authority</fullName>
            </value>
            <value>
                <fullName>Authorized Agent</fullName>
            </value>
            <value>
                <fullName>Authorized Agent / Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Authorized Individual</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Committee Member</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Control Person</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Cosigner</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>Deceased Grantor</fullName>
            </value>
            <value>
                <fullName>Decedent</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Full Authority</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Insured</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
            <value>
                <fullName>Minor Primary Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>