force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Is_ANZx_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_ANZx_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To identify Financial Account is of ANZx or not based on Marketing Code</description>
    <formula>IF(
    OR
    (
      FinServ__FinancialAccount__r.Marketing_Code__c != NULL, 
      FinServ__FinancialAccount__r.Is_Digitally_Active__c == true
    ),
    true,
    false
)</formula>
    <label>Is Digitally Active</label>
    <type>Checkbox</type>
</CustomField>