force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/IsPrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryOwner__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To identify whether this financial account associates to primary account owner or not</description>
    <defaultValue>false</defaultValue>
    <label>IsPrimaryOwner</label>
    <type>Checkbox</type>
</CustomField>