force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field holds the Ownership of the of the customer for the Financial Account</description>
    <formula>FinServ__FinancialAccount__r.Ownership__c</formula>
    <label>Ownership</label>
    <type>Text</type>
</CustomField>