force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Product_Code_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Display__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formular field to display product2 reference data for product code</description>
    <formula>FinServ__FinancialAccount__r.FinServ__ProductName__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>