force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Product Name is similar as financial account record type name</description>
    <formula>FinServ__FinancialAccount__r.Product_Name__c</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>