force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Product_Name_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Display__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formular field to display Meaningful product Name</description>
    <formula>FinServ__FinancialAccount__r.FinServ__ProductName__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>