force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>Primary Owner and Additional Owner Role Type</description>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancialAccountRoleType</valueSetName>
    </valueSet>
</CustomField>