force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(FinServ__FinancialAccount__r.FinServ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>