force-app/main/default/objects/FinServ__FinancialAccountRole__c/fields/Sub_product_Code_Display__c.field-meta.xml
<CustomField>
    <fullName>Sub_product_Code_Display__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formular field to display product2 reference data for sub product code</description>
    <formula>IF( NOT(ISBLANK(FinServ__FinancialAccount__r.FinServ__ProductName__c)), FinServ__FinancialAccount__r.FinServ__ProductName__r.Sub_Product_Code__c, FinServ__FinancialAccount__r.Product_SubCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Product Code</label>
    <type>Text</type>
</CustomField>