force-app/main/default/objects/FinServ__FinancialAccountRole__c/recordTypes/System_Role.recordType-meta.xml
<RecordType>
    <fullName>System_Role</fullName>
    <active>true</active>
    <label>System Role</label>
</RecordType>